# This poetry configuration file is for testing purposes to mock
# a python project file structure
[tool.poetry]
name = "serverless-tools"
version = "0.4.2"
description = "FreeAgent Serverless Tools"
authors = ["Yasser Bennani <yasser.bennani@freeagent.com>"]
packages = [{include = 'test_package', from = "test/fixtures/test-python-project/src"}]

[tool.poetry.dependencies]
decorator = "4.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
